--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,1 @@
-numpy
-opencv-python
-Pillow
-torch>=1.7
-torchvision>=0.8.0
-tqdm
-imageio
-gdown
+git+https://github.com/sberbank-ai/Real-ESRGAN.git
